--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -112,6 +112,7 @@ h6 {
 
 #header {
 	padding: 0px;
+  width: 1200px;
 }
 
 #tableHeader {
@@ -125,6 +126,25 @@ h6 {
 #tableHeader tr td {
 	margin: 0px;
 	padding: 0px;
+}
+
+#mySlidesDiv{
+  z-index: -2;
+  position: absolute;
+  text-align: center;
+}
+
+.mySlides {
+  width: 1200px;
+  height: 250px;
+}
+
+#shade {
+  width: 1200px;
+  height: 250px;
+  z-index: -1;
+  position: absolute;
+  background: rgba(22, 22, 22, 0.5);
 }
 
 #main-section {
@@ -180,6 +200,23 @@ h6 {
 	background-color: #000;
     margin-left: 0px;
     margin-right: 0px;
+}
+
+/* --------- Nav Collapse override ----------- */
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
 }
 
 /* ------------- Footer ------------- */
@@ -392,7 +429,7 @@ td#VolunteerNeeded {
 .marquee div {
   display: block;
   width: 200%;
-  height: 30px;
+  height: 35px;
 
   position: absolute;
   overflow: hidden;
@@ -420,7 +457,7 @@ td#VolunteerNeeded {
 .sidebarBox{
 	width: 35px; /* Replace with sidebar width */
 	float: right;
-  margin-right: 10px;
+  margin-right: 15px;
 	position: relative;
 }
 
