--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -62,6 +62,7 @@ ul {
 
 .over {
   text-decoration: line-through;
+  color: #888;
 }
 
 .cancelled {
@@ -87,7 +88,7 @@ ul {
   font-size: 17px;
   /* text-decoration: underline; */
   font-weight: bold;
-  content: "11/13/2016"
+  content: "7/5/2017"
 }
 
 h1 {
@@ -96,6 +97,7 @@ h1 {
   margin: 0;
   padding: 0px;
   width: 100%;
+  cursor: default;
 }
 
 h2 {
@@ -103,6 +105,7 @@ h2 {
   line-height: 35px !important;
   letter-spacing: 0px !important;
   margin: 0px;
+  cursor: default;
 }
 
 h2#pro {
@@ -215,6 +218,7 @@ h6 {
 
 #right {
   background-color: #191919;
+  margin-bottom: 10px;
   /* background-image: linear-gradient(rgb(60, 60, 60) 0%, rgb(34, 34, 34) 100%); */
   border-radius: 3px;
   width: 300px;
@@ -300,6 +304,7 @@ h6 {
   margin-top: -10px;
   margin: 0px;
   margin-left: 14px;
+  cursor: default;
 }
 
 .indexSchedule p {
@@ -381,8 +386,62 @@ td#VolunteerNeeded {
 
 .marqueeInfo:after {
   text-shadow: 2px 2px #000;
-  content:"THE FIRST RACE OF THE SEASON IS ALMOST HERE! WATCH AS WE COUNT DOWN!";
+  content:"THE THIRD RACE OF THE SEASON IS ON SUNDAY MAY 14TH! GATES OPEN AT 2:00PM!";
   /* content: "THE FINAL RACE OF THE SEASON IS ON SATURDAY OCTOBER 8TH. GATES OPEN AT 9:00am. QUALIFYING STARTS AT 10:00am."; */
+}
+
+/* ------------- ReturnToTopArrow ------------- */
+#return-to-top {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #999;
+  /* background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7); */
+  width: 40px;
+  height: 40px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  border-radius: 40px;
+  display: none;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor:pointer
+}
+
+#return-to-top i {
+  color: #000;
+  margin: 0;
+  position: relative;
+  left: 11.5px;
+  top: 9px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor:pointer
+}
+
+#return-to-top:hover {
+  background-color: #FFF;
+  cursor:pointer
+}
+
+#return-to-top:hover i {
+  top: 2px;
+  cursor:pointer
+}
+
+#return-to-top:active {
+  background-color: #666;
+  cursor:pointer
 }
 
 /* ------------- Scrolling Boxes ------------- */
@@ -450,11 +509,11 @@ td#VolunteerNeeded {
   padding: 0px 0px 0px 0px;
 }
 
-.BackToTopArrow {
+/* .BackToTopArrow {
   font-size: 35px;
   color: #999;
   text-decoration: none;
-}
+} */
 
 /* ------------- Countdown Timer ------------- */
 #SISLRARace {
@@ -564,7 +623,8 @@ td#VolunteerNeeded {
   margin-top: -10px;
   background-color: #202020;
   z-index: 1;
-  position:relative
+  position:relative;
+  cursor: default;
 }
 
 #footerCopyright p{
