--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -88,7 +88,7 @@ ul {
   font-size: 17px;
   /* text-decoration: underline; */
   font-weight: bold;
-  content: "7/5/2017"
+  content: "14/5/2017"
 }
 
 h1 {
@@ -386,7 +386,7 @@ td#VolunteerNeeded {
 
 .marqueeInfo:after {
   text-shadow: 2px 2px #000;
-  content:"THE THIRD RACE OF THE SEASON IS ON SUNDAY MAY 14TH! GATES OPEN AT 2:00PM! FREE ADMISSION FOR MOM'S!";
+  content:"THE FORTH RACE OF THE SEASON IS ON SUNDAY JUNE 11TH! GATES OPEN AT 2:00PM!";
   /* content: "THE FINAL RACE OF THE SEASON IS ON SATURDAY OCTOBER 8TH. GATES OPEN AT 9:00am. QUALIFYING STARTS AT 10:00am."; */
 }
 
